nlamah/src/main/resources/org/nlamah/QLS/test/error/unstyledquestionerror.qls
stylesheet test
{
	page test
	{
		section "test"
		{
			question question1
		}
	}
}